--------------------------
Changes in 1.9 (not yet released)
- IBillboardSceneNode got functions to access meshbuffers. So uv-coordinates can now be modified directly (previously only possible via texture matrix).
- vector3d scalar operator/ and operator/= no longer multiply by the inverse but use the expected division. 
  Costs some speed, but fixes floating point troubles caused by this optimization (like x/x no longer being 1.0).
- Bugfix: XML reader dropped last character in strings if there was a special character replacement for the second-last character.
- Avoid allocating more than 16k on stack in OCT loader. Also avoid potential heap overwrites in there.
- obj file loader now allows using mtl files with spaces in the filename. 
  Note that this means it no longer handles obj files which have multiple mtl files behind the mtllib command. 
  But Irrlicht ignored all but the first name anyway and this way of handling mtllib commands seems to be more common.
- Many defines changed because they were using names which are reserved identifiers in c++.
  Mostly it's about replacing __IRRxxx or _IRRxxx identifiers by versions without underscores
  Sometimes underscores at end also got removed.
  There is a header file irrLegacyDefines.h which can be included to allow having the old defines back.
  Thanks @Markus Elfring  for reporting this (bug #427)
- Add equals and set_data functions to core::array for easier working with blocks of data.
- SIrrlichtCreationParameters::IgnoreInput set to false works again on X11. 
  Thanks @ Victor Gaydov for report + patch + very good test cases! (bug #401)
  This had been broken since Irrlicht 1.6
- Add steer parameter to CSceneNodeAnimatorFollowSpline which allows rotating node toward direction of movement. 
  Thanks @ Bate for the patch (patch #175)
- Add a workaround for XWarpPointer bug that causes mouse to jump when users have set a Coordinate Transformation Matrix for their mouse on X11.